# performance_test

./: .gitignore  README.md  REPORT_STRUCTURE.md  SETUP_SUMMARY.md  UPDATED_REPORT_STRUCTURE.md
.github/workflows/: performance-benchmark.yml
astro-react-askama/: Cargo.toml  astro.config.mjs  package-lock.json  package.json  tsconfig.json
astro-react-askama/src/: main.rs
astro-react-askama/src/astro/pages/: index.tsx
astro-react-askama/src/templates/: index.html
astro-react-askama/templates/: index.html
astro-react-bun-ssr/: astro.config.mjs  package.json
astro-react-bun-ssr/src/components/: App.tsx
astro-react-csr/: astro.config.mjs  package.json
bun-test/: README.md  package.json  tsconfig.json
bun-test/src/: server.tsx
config/: README.md  benchmark-config.dev.json  benchmark-config.json
deno-test/: README.md  deno.json  fresh.config.ts  fresh.gen.ts  main.ts
deno-test/routes/: _app.tsx  index.tsx
nextjs-test/: README.md  package.json  tsconfig.json
nextjs-test/app/: globals.css  layout.tsx  page.tsx
reports/: SAMPLE_REPORT.md  benchmark-20251206_134103.md  benchmark-20251206_140252.md  benchmark-20251207_043754.md  benchmark-20251207_072815.md
reports/history/: README.md  index.md
reports/latest/: index.md
scripts/: generate-report.js  run-benchmarks.sh  validate-setup.sh
tanstack-start-bun/: app.config.timestamp_1765075108375.js  app.config.ts  package.json  tsconfig.json  vite.config.ts
tanstack-start-bun/app/: ssr.tsx
tanstack-start-bun/src/: routeTree.gen.ts
tuono-test/: Cargo.toml  package-lock.json  package.json
(+11 files in other folders)
