[package]
name = "astro-react-askama"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
askama = "0.12"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
